--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "bot_token":"",
-    "category":"填類別名稱",
-    "comment_channel":1111111111111,
-    "admin_role_id":111111111111
+    "bot_token":"OTgyNDMyNTE1NTQzNDMzMjM2.GWRDSk.myatoIj7vpyqWrkD4x_rSGoTNmp69p-plZa5TI",
+    "category":"===事務===",
+    "comment_channel":987364669939408967,
+    "admin_role_id":993332581602951250
 }
