--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "bot_token":"OTgyNDMyNTE1NTQzNDMzMjM2.GWRDSk.myatoIj7vpyqWrkD4x_rSGoTNmp69p-plZa5TI",
+    "bot_token":"OTcwMzI5MjAzMjA1NjAzMzQ4.GXkRQW.2HrT8ADzuANAUygEohRJD-3XgXeN2rC3-YvHZg",
     "category":"===事務===",
     "comment_channel":987364669939408967,
     "admin_role_id":993332581602951250
