--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "bot_token":"OTcwMzI5MjAzMjA1NjAzMzQ4.GXkRQW.2HrT8ADzuANAUygEohRJD-3XgXeN2rC3-YvHZg",
+    "bot_token":"OTcwMzI5MjAzMjA1NjAzMzQ4.GeMmmp.oZwbpeloGRiDECisO18nqIJs-ZsHxKw07VGIhw",
     "category":"===事務===",
     "comment_channel":987364669939408967,
     "admin_role_id":993332581602951250
