--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "bot_token":"OTcwMzI5MjAzMjA1NjAzMzQ4.GeMmmp.oZwbpeloGRiDECisO18nqIJs-ZsHxKw07VGIhw",
+    "bot_token":"OTQ3MjkzMDQ2NTg2ODY3ODU0.GNIaI5.wJpAlVmE9xx7tqXRnVh0jmHcR9JB0lxjkO-BCI",
     "category":"===事務===",
     "comment_channel":987364669939408967,
     "admin_role_id":993332581602951250
